<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraPreviewActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar_foto"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_Blue"
            />

        <Button
            android:id="@+id/btnSalvarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar_foto"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_Blue"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnTirarNovamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar_novamente"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_Blue"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/tire_uma_foto_do_cliente_para_confirma_o_de_identidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/ivVoltar"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/seta_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/ivFotoTirada"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>