<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_Blue"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <ImageView
        android:id="@+id/ivVoltar"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/seta_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/ContainerComponents"
        android:layout_width="381dp"
        android:layout_height="301dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="206dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signInCV"
        android:layout_width="330dp"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="293dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnEnviarEmail"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/enviar"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_Blue"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edEmailL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/grey_white"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/e_mail_de_cadastro"
            android:textColorHint="@color/light_Blue"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@id/signInCV"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-40dp"
        android:elevation="10dp"/>

    <TextView
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLL"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="44dp"
        android:text="@string/enviaremos_um_link_de_recupera_o_da_senha_para_seu_email"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:textColor="@color/grey_white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/recuperac_o_de_senha"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/grey_white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="351dp"
        android:layout_height="466dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scaleType="center"
        app:srcCompat="@drawable/lockit_half_logo" />


</RelativeLayout>