<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReadNFCActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/dark_Blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/design_sem_nome_2_removebg_preview" />

    <ImageView
        android:id="@+id/ivVoltar"
        android:layout_width="90dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/seta_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginStart="60dp"
        android:paddingTop="30dp"
        android:background="@drawable/et_bg"
        android:backgroundTint="@color/light_Blue"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/realize_o_estorno_do_valor_correspondente_com_o_tempo_de_uso_do_cliente"
        android:textAlignment="center"
        android:textColor="@color/grey_white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/btnLimparDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:text="@string/encerrar_loca_o"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/light_Blue"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/btnRealizarEstorno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:text="@string/realizar_estorno"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/light_Blue"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>